--- a/hw_test/hello_adc/CMakeLists.txt
+++ b/hw_test/hello_adc/CMakeLists.txt
@@ -4,8 +4,12 @@ add_executable(hello_adc
 
 target_link_libraries(hello_adc pico_stdlib hardware_adc)
 
+# enable usb output, disable uart output
+pico_enable_stdio_usb(hello_adc 1)
+pico_enable_stdio_uart(hello_adc 1)
+
 # create map/bin/hex file etc.
 pico_add_extra_outputs(hello_adc)
 
 # add url via pico_set_program_url
-example_auto_set_url(hello_adc)
+# example_auto_set_url(hello_adc)
