--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(pico_blink)
 add_subdirectory(oled)
 add_subdirectory(quadrature_encoder)
 add_subdirectory(dac_buttons)
+add_subdirectory(leds)
