added example for piezo

--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(oled)
 add_subdirectory(quadrature_encoder)
 add_subdirectory(dac_buttons)
 add_subdirectory(leds)
+add_subdirectory(piezo)
