added example led_fade

--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(quadrature_encoder)
 add_subdirectory(dac_buttons)
 add_subdirectory(leds)
 add_subdirectory(piezo)
+add_subdirectory(led_fade)
