--- a/hw_test/led_fade/CMakeLists.txt
+++ b/hw_test/led_fade/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(pwm_led_fade
         )
 
 # pull in common dependencies and additional pwm hardware support
-target_link_libraries(pwm_led_fade pico_stdlib hardware_pwm)
+target_link_libraries(pwm_led_fade pico_stdlib hardware_pwm hardware_adc)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(pwm_led_fade)
