--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(dac_buttons)
 add_subdirectory(leds)
 add_subdirectory(piezo)
 add_subdirectory(potentiometer)
+add_subdirectory(spi_expander)
