added example edid_info

--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(leds)
 add_subdirectory(piezo)
 add_subdirectory(potentiometer)
 add_subdirectory(spi_expander)
+add_subdirectory(edid_info)
