changed hierarchy of project

--- a/hw_test/CMakeLists.txt
+++ b/hw_test/CMakeLists.txt
@@ -1,9 +1,5 @@
 add_subdirectory(pico_blink)
-add_subdirectory(oled)
-add_subdirectory(quadrature_encoder)
-add_subdirectory(dac_buttons)
-add_subdirectory(leds)
-add_subdirectory(piezo)
-add_subdirectory(potentiometer)
-add_subdirectory(spi_expander)
-add_subdirectory(edid_info)
+add_subdirectory(basic_ui)
+add_subdirectory(spi)
+add_subdirectory(i2c)
+add_subdirectory(audio)
