--- a/hw_test/i2c/CMakeLists.txt
+++ b/hw_test/i2c/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_subdirectory(oled)
-add_subdirectory(edid_info)
 add_subdirectory(scan_i2c_bus)
+add_subdirectory(oled)
+add_subdirectory(eeprom)
+add_subdirectory(edid_info)
