--- a/hw_test/i2c/oled/CMakeLists.txt
+++ b/hw_test/i2c/oled/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(oled
-	example.c ssd1306.c
+	oled.c
+    ssd1306.c
 )
 
 target_include_directories(oled
@@ -14,4 +15,3 @@ pico_enable_stdio_uart(oled 0)
 
 # create map/bin/hex/uf2 file in addition to ELF.
 pico_add_extra_outputs(oled)
-
